--- a/views/pages/go_no_go.ejs
+++ b/views/pages/go_no_go.ejs
@@ -16,8 +16,8 @@
     <script src="js/utils.js"></script>
 
     <!-- Stylesheets. -->
-    <link href="jsPsych/css/jspsych.css" rel="stylesheet" type="text/css"></link>
-    <link href="jsPsych/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+    <link href="jspsych/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+    <link href="jspsych/css/jspsych.css" rel="stylesheet" type="text/css"></link>
     <link href="css/experiment.css" rel="stylesheet" type="text/css"></link>
   </head>
 
@@ -167,8 +167,8 @@ ${anykey}
     // so you don't have to click through them to test
     // the section you're working on.
     var timeline = [
-      // welcome_block,
-      // instructions_block,
+      welcome_block,
+      instructions_block,
       test_block,
       debrief_block,
     ];
