add console message

--- a/experiment/views/pages/go_no_go.ejs
+++ b/experiment/views/pages/go_no_go.ejs
@@ -34,6 +34,7 @@
     ///////////
     // Setup //
     ///////////
+    console.log('Initializing go/no-go experiment.')
 
     const {condition, images} = <%- PARAMS %>;
     const N_TRIAL = 4;
